--- a/Trang chu/trang-chu.html
+++ b/Trang chu/trang-chu.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="d-flex justify-content-between">
                     <div id="header-logo">
-                        <a href="#">
+                        <a href="../Trang chu/trang-chu.html">
                             <img class="w-100" src="imgs/logo.jpg" alt="logo">
                         </a>
                     </div>
@@ -24,10 +24,10 @@
                             class="nav justify-content-end align-content-center">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="#">Trang chủ</a>
+                                    href="../Trang chu/trang-chu.html">Trang chủ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Giới thiệu</a>
+                                <a class="nav-link" href="../Gioi thieu/gioi-thieu.html">Giới thiệu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Sản phẩm</a>
@@ -302,6 +302,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="about-us-content">
                     <h4 class="text-center text-uppercase">Tại sao nên chọn Hoàng Hoan</h4>
                     <div class="hr"></div>
@@ -525,7 +526,7 @@
                             <nav>
                                 <ul>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Giới
+                                        <a class="nav-link" href="../Gioi thieu/gioi-thieu.html">Giới
                                             thiệu</a>
                                     </li>
                                     <li class="nav-item">
@@ -549,13 +550,13 @@
                         <div>
                             <h4>Kết nối với chúng tôi</h4>
                             <div>
-                                <a href="#" class="icon-footer-connect">
+                                <a href="https://www.facebook.com/" target="_blank" class="icon-footer-connect">
                                     <img src="./imgs/icons/icon_fb_pro.jpg" alt="">
                                 </a>
-                                <a href="#" class="icon-footer-connect" >
+                                <a href="https://id.zalo.me/account?continue=https%3A%2F%2Fchat.zalo.me%2F" target="_blank" class="icon-footer-connect" >
                                     <img src="./imgs/icons/icon_zalo_pro.jpg" alt="zalo-icon">
                                 </a>
-                                <a href="#" class="icon-footer-connect">
+                                <a href="https://www.gmail.com/" target="_blank" class="icon-footer-connect">
                                     <img src="./imgs/icons/icon_email_pro.jpg" alt="">
                                 </a>
                             </div>
